--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     <link rel=stylesheet href=/index.css>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
   </head>
 <div id=app></div>
 <script src="/bundle.js"></script>
